Added basic version of security

--- a/BookRecommendationWebApp/BookRecommendationWebApp/appsettings.json
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-L7P3ECG1;Database=BookwormsAdvisorDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultDatabaseConnection": "Server=LAPTOP-L7P3ECG1;Database=BookwormsAdvisorDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
